--- a/src/templates/snippets/header.html
+++ b/src/templates/snippets/header.html
@@ -17,19 +17,16 @@
 <!-- Header -->
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
   <h5 class="my-0 mr-md-auto font-weight-normal">
-  	{% if request.user.is_authenticated %}
-  		<p class="m-auto">Bonjour, {{request.user.username}}</p>
-  	{% endif %}
+		<p class="m-auto">Bonjour, {{request.user.username}} !</p>
   </h5>
   <nav class="my-2 my-md-0 mr-md-3">
-  	{% if request.user.is_authenticated %}
-	  	<a class="p-2 text-dark" href="{% url 'home' %}">Accueil</a>
-	    <a class="p-2 text-dark" href="{% url 'account' %}">Mon compte</a>
-	    <a class="p-2 text-dark" href="{% url 'logout' %}">Se déconnecter</a>
-	{% else %}
-			<a class="p-2 text-dark" href="{% url 'home' %}">Accueil</a>
-	   	<a class="btn btn-outline-primary" href="{% url 'login' %}">Se connecter</a>
-	{% endif %}
+  	<a class="p-2 text-dark" href="{% url 'home' %}">Accueil</a>
+    <a class="p-2 text-dark" href="{% url 'account' %}">Mon compte</a>
+		{% if request.user.is_admin %}
+		<a class="p-2 text-dark" href="admin/">Administration</a>
+		{% endif %}
+		<a class="btn btn-outline-primary" href="{% url 'logout' %}">Se déconnecter</a>
+
 
   </nav>
 </div>
