background process with progressbar

--- a/src/personal/templates/personal/home.html
+++ b/src/personal/templates/personal/home.html
@@ -37,9 +37,8 @@
 	}
 </style>
 
+<a class="btn btn-outline-primary" href="{% url 'process' %}">Accéder aux processus</a>
 
-<!-- main content -->
-<div class="container">
-</div>
+
 
 {% endblock content %}
