update process button

--- a/src/personal/templates/personal/home.html
+++ b/src/personal/templates/personal/home.html
@@ -37,8 +37,13 @@
 	}
 </style>
 
-<a class="btn btn-outline-primary" href="{% url 'process' %}">Accéder aux processus</a>
+<div class="container text-center" style="padding-top: 20px;">
+	<a class="btn btn-primary" href="{% url 'process' %}">
+		<strong>Accéder aux processus</strong>
+	</a>
 
+	<!-- <a class="btn btn-outline-primary" href="{% url 'process' %}">Accéder aux processus</a> -->
+</div>
 
 
 {% endblock content %}
