--- a/src/personal/templates/personal/process.html
+++ b/src/personal/templates/personal/process.html
@@ -8,8 +8,8 @@
 	<form action="{% url 'process' %}" method="post" style="display: inline;">
 		{% csrf_token %}
 
-		<button class="btn btn-primary" type="submit" style="width:120px;">
-			<strong>Commencer le processus</strong>
+		<button class="btn btn-primary" type="submit">
+			<strong>Commencer le premier processus</strong>
 		</button>
 	</form>
 
