add patient form

--- a/src/account/templates/account/login.html
+++ b/src/account/templates/account/login.html
@@ -44,7 +44,7 @@
 
   <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
 
-  <input type="username" name="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+  <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
 
   <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
