--- a/src/personal/templates/personal/home.html
+++ b/src/personal/templates/personal/home.html
@@ -41,7 +41,7 @@
 	<a class="btn btn-primary" href="{% url 'personal:process' %}">
 		<strong>Accéder aux processus</strong>
 	</a>
-	<a class="btn btn-primary" href="{% url 'personal:create' %}">
+	<a class="btn btn-primary" href="{% url 'personal:include' %}">
 		<strong>Inclure un patient</strong>
 	</a>
 
