--- a/src/templates/registration/password_change.html
+++ b/src/templates/registration/password_change.html
@@ -34,7 +34,7 @@
 
 <form method="POST" class="form-signin">{% csrf_token %}
   <h1 class="h3 mb-3 font-weight-normal">Changement de mot de passe</h1>
-    <input name="old_password" class="form-control" placeholder="Ancien mot de passe" type="password" id="id_old_password" required="true">
+    <input name="old_password" class="form-control" placeholder="Mot de passe" type="password" id="id_old_password" required="true">
     <input name="new_password1" class="form-control" placeholder="Nouveau mot de passe" type="password" id="id_new_password1" required="true">
     <input name="new_password2" class="form-control" placeholder="Confirmation" type="password" id="id_new_password2" required="true">
 
