--- a/src/templates/snippets/header.html
+++ b/src/templates/snippets/header.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-
 <style type="text/css">
 	.b-example-divider {
 	  height: 3rem;
@@ -56,7 +55,12 @@
 
 			<div class="dropdown text-end">
 				<a href="#" class="d-block link-light text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-					<img src="{% static 'default_avatar.jpg' %}" alt="mdo" width="32" height="32" class="rounded-circle">
+					{% if user.profile_picture %}
+					<img src="{{user.profile_picture.url}}" alt="mdo" width="32" height="32" class="rounded-circle">
+					{% else %}
+					<img src="{% static 'images/default_profile_picture.png' %}" alt="mdo" width="32" height="32" class="rounded-circle">
+			    {% endif %}
+
 				</a>
 				<ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
 					<li><a class="dropdown-item" href="{% url 'personal:include' %}">Inclure un patient...</a></li>
@@ -66,29 +70,11 @@
 					<li><a class="dropdown-item" href="{% url 'logout' %}">Se déconnecter</a></li>
 				</ul>
 			</div>
-<!-
+
 		</div>
 	</div>
 </header>
 
-<!--
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto font-weight-normal">
-		<p class="m-auto">Bonjour, {{request.user.username}} !</p>
-  </h5>
-  <nav class="my-2 my-md-0 mr-md-3">
-  	<a class="p-2 text-dark" href="{% url 'home' %}">Accueil</a>
-    <a class="p-2 text-dark" href="{% url 'account' %}">Mon compte</a>
-		{% if request.user.is_admin %}
-			<a class="p-2 text-dark" href="/admin/">Administration</a>
-		{% endif %}
-		<a class="btn btn-outline-primary" href="{% url 'logout' %}">Se déconnecter</a>
-
-
-  </nav>
-</div> -->
-
-<!-- End Header -->
 
 <script type="text/javascript">
 	document.getElementById("id_q").value = "{{query}}"
