--- a/src/account/templates/account/account.html
+++ b/src/account/templates/account/account.html
@@ -91,7 +91,8 @@
 
   <!-- Image -->
   <div class="form-group image-group" id="id_image_group">
-    {% if user.profile_picture %}
+
+    {% if user.profile_picture_is_valid %}
     <img class="img mx-auto d-block image rounded-circle" src="{{user.profile_picture.url}}" id="id_image_display" width=150 height=150>
     {% else %}
     <img class="img mx-auto d-block image rounded-circle" src="{% static 'images/default_profile_picture.png' %}" id="id_image_display" width=150 height=150>
