--- a/src/templates/snippets/header.html
+++ b/src/templates/snippets/header.html
@@ -33,15 +33,15 @@
 	.dropdown-toggle {
 	  outline: 0;
 	}
+	.h2 {
+		font-size: 95%;
+		color: rgba(255, 255, 255, 0.5);
+	}
 
 </style>
 <header class="p-3 bg-dark text-white">
 	<div class="container">
 		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-			<a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-				<svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-			</a>
-
 			<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 				<li><a class="nav-link px-2 text-secondary" href="{% url 'home' %}">Accueil</a></li>
 				<li><a class="nav-link px-2 text-white" href="/admin/">Administration</a></li>
@@ -49,9 +49,8 @@
 				<li><a class="nav-link px-2 text-white" href="#">Aide</a></li>
 			</ul>
 
-			<form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-				<input type="search" class="form-control form-control-dark" placeholder="Rechercher un patient..." aria-label="Search">
-			</form>
+			<h2 class="h2 col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-center"> Bonjour {{ user.username }}</h2>
+
 
 			<div class="dropdown text-end">
 				<a href="#" class="d-block link-light text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
