--- a/src/account/templates/account/account.html
+++ b/src/account/templates/account/account.html
@@ -81,7 +81,6 @@
   .h1  {
     text-align: center;
   }
-
 </style>
 
 
@@ -158,6 +157,8 @@
   <p style="color:green; text-align: center;">{{success_message}}</p>
 {% endif  %}
 
+
+{% include  'inclusion/inclusions.html' %}
 
 
 
