--- a/src/templates/snippets/header.html
+++ b/src/templates/snippets/header.html
@@ -62,7 +62,7 @@
 
 				</a>
 				<ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-					<li><a class="dropdown-item" href="{% url 'personal:include' %}">Inclure un patient...</a></li>
+					<li><a class="dropdown-item" href="{% url 'inclusion:create' %}">Inclure un patient...</a></li>
 					<li><a class="dropdown-item" href="{% url 'personal:process' %}">Lancer un process...</a></li>
 					<li><a class="dropdown-item" href="{% url 'account' %}">Mon compte</a></li>
 					<li><hr class="dropdown-divider"></li>
