--- a/src/inclusion/templates/inclusion/create_patient_file.html
+++ b/src/inclusion/templates/inclusion/create_patient_file.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 
 {% block content %}
 
 <style type="text/css">
   .create-form {
-	    width: 100%;
+	    width: 50%;
 	    max-width: 100%;
 	    padding: 15px;
 	    margin: auto;
@@ -14,38 +15,30 @@
   	.submit-button{
   		max-width: 200px;
   	}
+    .h3 {
+      margin-top: 150px;
+    }
 </style>
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-7 offset-lg-1">
-			<form class="create-form" method="post" enctype="multipart/form-data">{% csrf_token %}
+<form method="post" class="create-form">
+  {% csrf_token %}
 
-				<!-- title -->
-				<div class="form-group">
-					<label for="id_title">Title</label>
-					<input class="form-control" type="text" name="title" id="id_title" placeholder="Title" required autofocus>
-				</div>
 
-				<!-- Body -->
-				<div class="form-group">
-					<label for="id_body">Content</label>
-					<textarea class="form-control" rows="10" type="text" name="body" id="id_body" placeholder="This blog is about..." required></textarea>
-				</div>
+  <h3> Informations patient </h3>
+  <hr>
+  <table class="table table-striped table-sm">
+  {{patient_form}}
+  </table>
 
-				<!-- Image -->
-				<div class="form-group">
-					<label for="id_image">Image</label>
-					<input  type="file" name="image" id="id_image" accept="image/*" required>
-				</div>
+  <h3> Données clinique </h3>
+  <hr>
+  <table class="table table-striped table-sm">
+  {{clinical_form}}
+  </table>
 
-				<!-- Submit btn -->
-				<button class="submit-button btn btn-lg btn-primary btn-block" type="submit">POST</button>
-			</form>	
-		</div>
-	</div>
-</div>
 
+  <button type="submit" class="btn btn-success">Inclure</button>
+</form>
 
 
 
