--- a/src/inclusion/templates/inclusion/detail_patient_file.html
+++ b/src/inclusion/templates/inclusion/detail_patient_file.html
@@ -1,37 +1,54 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 
 {% block content %}
 
-
 <style type="text/css">
-	.card{
-		max-width: 700px;
-	}
-	.card-body{
-		padding: 20px;
-	}
+  .details {
+	    width: 50%;
+	    max-width: 100%;
+	    padding: 15px;
+	    margin: auto;
+  	}
+
+  	.submit-button{
+  		max-width: 200px;
+  	}
+    .h3 {
+      margin-top: 150px;
+    }
+    input {
+      border-style: hidden;
+    }
+
 </style>
 
-<div class="container">
-	<div class="row">
+<a href="{% url 'home' %}" class="btn">< Retour</a>
 
-		<div class="card m-auto">
-			<img class="card-img-top" src="{{patient_file.image.url}}">
-			<div class="card-body mt-2 mb-2">
-			  <h2 class="card-title">{{patient_file.title}}</h2>
-			  <p class="card-text">{{patient_file.body|safe}}</p>
-			  {% if patient_file.author == request.user %}
-			  	<a href="{% url 'inclusion:edit' patient_file.slug %}" class="btn btn-primary">Modifier</a>
-			  {% endif %}
-			</div>
-			<div class="card-footer text-muted">
-			  Modifié le {{patient_file.date_updated}} par {{patient_file.author}}
-			</div>
-		</div>
-	</div>
+<div class="details">
+  <fieldset disabled="disabled">
+
+    <h3> Patient n°{{id}}</h3><hr>
+    <table class="table table-striped table-sm">
+      {% for field in patient_form %}
+        <tr>
+          <th> {{field.label}} </th>
+          <td> {{field.value}} </td>
+        </tr>
+      {% endfor %}
+    </table>
+
+  </fieldset>
+  <div class="card-footer text-muted">
+    Modifié le {{date_updated}} par @{{author}}
+  </div>
+  <a href="{% url 'inclusion:edit' slug %}" class="btn btn-primary">Modifier</a>
+
 </div>
 
+<div class="details">
 
+</div>
 
 {% endblock content %}
