--- a/src/inclusion/templates/inclusion/edit_patient_file.html
+++ b/src/inclusion/templates/inclusion/edit_patient_file.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 
 {% block content %}
+
 <style type="text/css">
-   .create-form {
-	    width: 100%;
+  .create-form {
+	    width: 50%;
 	    max-width: 100%;
 	    padding: 15px;
 	    margin: auto;
@@ -13,112 +15,25 @@
   	.submit-button{
   		max-width: 200px;
   	}
-
-	.image {
-	  opacity: 1;
-	  transition: .5s ease;
-	  backface-visibility: hidden;
-	}
-
-	.middle {
-	  transition: .5s ease;
-	  opacity: 0;
-	  position: absolute;
-	  text-align: center;
-	  top: 50%;
-	  left: 50%;
-	  transform: translate(-50%, -50%);
-
-	}
-	.image-group{
-		position: relative;
-  		text-align: center;
-  		cursor:pointer;
-	}
-
-	.image-group:hover .image {
-	  opacity: 0.3;
-	}
-
-	.image-group:hover .middle {
-	  opacity: 1;
-	}
-
-	.text {
-	  margin: auto;
-	  background-color: #4CAF50;
-	  color: white;
-	  font-size: 15px;
-	  padding: 15px;
-	}
+    .h3 {
+      margin-top: 150px;
+    }
 </style>
+<a href="{% url 'inclusion:detail' slug %}" class="btn">< Retour</a>
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-7 offset-lg-1">
+<form method="post" class="create-form">
+  {% csrf_token %}
+    <h3> Patient n°{{id}}</h3><hr>
+    <table class="table table-striped table-sm" disabled>
+    {{patient_form}}
+    </table>
 
-			{% if success_message %}
-				<h3 style="color:green; text-align: center;">{{success_message}}</h3>
-			{% endif %}
-
-			<form class="create-form" method="post" enctype="multipart/form-data">{% csrf_token %}
-
-				<!-- title -->
-				<div class="form-group">
-					<label for="id_title">Title</label>
-					<input class="form-control" type="text" name="title" id="id_title" placeholder="Title" value="{{form.initial.title}}" required autofocus>
-				</div>
-
-				<!-- Body -->
-				<div class="form-group">
-					<label for="id_body">Content</label>
-					<textarea class="form-control" rows="10" type="text" name="body" id="id_body" placeholder="This blog is about..."
-					required>{{form.initial.body}}</textarea>
-				</div>
-
-				<!-- Image -->
-				<div class="form-group image-group" id="id_image_group">
-					<img class="img-fluid image" src="{{form.initial.image.url}}" id="id_image_display">
-					  <div class="middle">
-					    <div class="text">Change image</div>
-					  </div>
-				</div>
-				<input type="file" name="image" id="id_image_file" accept="image/*" onchange="readURL(this)">
+  <button type="submit" class="btn btn-primary"> Enregistrer les modifications</button>
+  <a type="button" href="{% url 'inclusion:detail' slug %}" class="btn btn-primary">Annuler</a>
 
 
-				{% for field in form %}
-					<p>
-						{% for error in field.errors %}
-							<p style="color: red">{{ error }}</p>
-						{% endfor %}
-					</p>
-				{% endfor %}
-				{% if form.non_field_errors %}
-					<div style="color: red">
-						<p>{{form.non_field_errors}}</p>
-					</div>
-				{% endif %}
+</form>
 
-				<!-- Submit btn -->
-				<button class="submit-button btn btn-lg btn-primary btn-block" type="submit">Appliquer les modifications</button>
-			</form>
-		</div>
-	</div>
-</div>
 
-<script type="text/javascript">
-	document.getElementById('id_image_group').onclick = function(event){
-    	document.getElementById('id_image_file').click();
-    };
-
-	function readURL(input){
-		var reader = new FileReader();
-		reader.onload = function (e) {
-            $('#id_image_display')
-                .attr('src', e.target.result)
-        };
-		reader.readAsDataURL(input.files[0]);
-	}
-</script>
 
 {% endblock content %}
