--- a/src/templates/snippets/footer.html
+++ b/src/templates/snippets/footer.html
@@ -17,7 +17,7 @@
 <!-- Footer -->
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
 	<div class="col-md-4 d-flex align-items-center">
-		<span class="text-muted">2021 | UTAH par @jeaunrg | 2021</span>
+		<span class="text-muted">UTAH par @jeaunrg | 2021</span>
 	</div>
 </footer>
 
