organise and add searchable table

--- a/src/account/templates/account/account.html
+++ b/src/account/templates/account/account.html
@@ -145,7 +145,7 @@
 
 
 
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Enregistrer les modifications</button>
+  <button class="btn btn-success" type="submit">Enregistrer</button>
 
 </form>
 
@@ -156,9 +156,6 @@
 {% if success_message %}
   <p style="color:green; text-align: center;">{{success_message}}</p>
 {% endif  %}
-
-
-{% include  'inclusion/inclusions.html' %}
 
 
 
