--- a/src/inclusion/templates/inclusion/detail_patient_file.html
+++ b/src/inclusion/templates/inclusion/detail_patient_file.html
@@ -24,7 +24,7 @@
 
 </style>
 
-<a href="{% url 'home' %}" class="btn">< Retour</a>
+<a href="{% url 'home' %}" class="btn btn-outline-dark">< Retour</a>
 
 <div class="details">
   <fieldset disabled="disabled">
@@ -43,7 +43,7 @@
   <div class="card-footer text-muted">
     Modifié le {{date_updated}} par @{{author}}
   </div>
-  <a href="{% url 'inclusion:edit' slug %}" class="btn btn-primary">Modifier</a>
+  <a href="{% url 'inclusion:edit' slug %}" class="btn btn-success">Modifier</a>
 
 </div>
 
