--- a/src/inclusion/templates/inclusion/snippets/patient_file_pagination.html
+++ b/src/inclusion/templates/inclusion/snippets/patient_file_pagination.html
@@ -2,26 +2,26 @@
 <div class="d-flex flex-column m-auto pagination mt-5">
 <nav aria-label="Page navigation">
 <ul class="pagination pg-grey justify-content-center">
-	{% if patient_files.has_previous %}
+	{% if patients.has_previous %}
         <li class="page-item">
-		  <a class="page-link" href="?{% if query %}q={{query}}&{% endif %}page={{ patient_files.previous_page_number }}">&laquo; Previous</a>
+		  <a class="page-link" href="?{% if query %}q={{query}}&{% endif %}page={{ patients.previous_page_number }}">&laquo; Précédente</a>
 		</li>
     {% endif %}
 
-	{% for i in patient_files.paginator.page_range %}
-		{% if patient_files.number == i %}
+	{% for i in patients.paginator.page_range %}
+		{% if patients.number == i %}
 			<li class="page-item active"><a class="page-link">{{ i }}</a></li>
 		{% else %}
 			<li class="page-item" ><a class="page-link" href="?{% if query %}q={{query}}&{% endif %}page={{ i }}">{{ i }}</a></li>
 		{% endif %}
 	{% endfor %}
 
-    {% if patient_files.has_next %}
+    {% if patients.has_next %}
     	<li class="page-item">
-		  <a class="page-link" href="?{% if query %}q={{query}}&{% endif %}page={{ patient_files.next_page_number }}">Next</a>
+		  <a class="page-link" href="?{% if query %}q={{query}}&{% endif %}page={{ patients.next_page_number }}">Suivante</a>
 		</li>
 		<li class="page-item">
-		  <a class="page-link"  href="?{% if query %}q={{query}}&{% endif %}page={{ patient_files.paginator.num_pages }}">Last &raquo;</a>
+		  <a class="page-link"  href="?{% if query %}q={{query}}&{% endif %}page={{ patients.paginator.num_pages }}">Fin &raquo;</a>
 		</li>
     {% endif %}
 </ul>
