--- a/src/templates/snippets/footer.html
+++ b/src/templates/snippets/footer.html
@@ -1,31 +1,9 @@
 <style type="text/css">
-	.b-example-divider {
-	  height: 3rem;
-	  background-color: rgba(0, 0, 0, .1);
-	  border: solid rgba(0, 0, 0, .15);
-	  border-width: 1px 0;
-	  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-	}
-
-	.bi {
-	  vertical-align: -.125em;
-	  fill: currentColor;
-	}
-
 </style>
 
-<!-- Footer -->
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-	<div class="col-md-4 d-flex align-items-center">
-		<span class="text-muted">UTAH par @jeaunrg | 2021</span>
-	</div>
-</footer>
+<footer>
 
-<!-- <br>
-<div class="d-flex flex-row align-items-center footer  bg-white border-top shadow-lg">
-	<p class="m-auto">UTAH par @jeaunrg | 2021</p>
-</div> -->
-<!-- End Footer -->
+</footer>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
