--- a/src/inclusion/templates/inclusion/create_patient.html
+++ b/src/inclusion/templates/inclusion/create_patient.html
@@ -25,15 +25,11 @@
 <form method="post" class="create-form">
   {% csrf_token %}
 
-
-  <h3> Informations patient </h3>
+  <h3> Saisie des données pré-opératoires </h3>
   <hr>
-  <table class="table table-striped table-sm">
-  {{patient_form}}
-  </table>
+  {% include 'inclusion/snippets/form2html.html' %}
 
-
-  <button type="submit" class="btn btn-success">Inclure</button>
+  <button type="submit" class="btn btn-success">Envoyer</button>
 </form>
 
 
