--- a/src/inclusion/templates/inclusion/detail_patient.html
+++ b/src/inclusion/templates/inclusion/detail_patient.html
@@ -31,7 +31,7 @@
 
     <h3> Patient n°{{id}}</h3><hr>
     <table class="table table-striped table-sm">
-      {% for field in patient_form %}
+      {% for field in form %}
         <tr>
           <th> {{field.label}} </th>
           <td> {{field.value}} </td>
