--- a/src/inclusion/templates/inclusion/patients.html
+++ b/src/inclusion/templates/inclusion/patients.html
@@ -29,7 +29,7 @@
   <form method="get">
     <div class="form-floating">
       <input class="form-control"  name="q" type="text" id="id_q" placeholder="recherche">
-      <label for="id_q">Rechercher des patients (par n°IPP, prénom ou nom)</label>
+      <label for="id_q">Rechercher des patients...</label>
     </div>
   </form>
 </div>
@@ -45,7 +45,7 @@
 <div class="patients">
 <br>
 <div class="text-left">
-<a href="{% url 'inclusion:create' %}" class="btn btn-outline-success">Inclure un patient</a>
+<a href="{% url 'inclusion:create' %}" class="btn btn-outline-success">Cliquez içi pour savoir quel traitement arréter et comment !</a>
 </div>
 
 {% if n_patients %}
@@ -53,32 +53,32 @@
 
 <table id="mytable" class="table table-bordred table-striped sortable">
   <thead>
-    <th></th>
-    <th>n°IPP</th>
-    <th>Prénom</th>
-    <th>Nom</th>
+    <th>N°Inclusion</th>
+    <th>Intervention</th>
+    <th>Chirurgie</th>
+    <th>Pathologie</th>
+    <th>Traitement 1</th>
+    <th>Traitement 2</th>
     <th>Auteur</th>
-    <th>Date d'inclusion</th>
-    <th>Date de modification</th>
   </thead>
 
 <tbody>
   {% for file in patients %}
   <tr>
-    <th><a class="btn btn-success" href="{% url 'inclusion:detail' file.slug %}">{{file.id}}</a> </th>
-    <td>{{file.nipp}}</td>
-    <td>{{file.first_name}}</td>
-    <td>{{file.last_name}}</td>
+    <th><a class="btn btn-success" href="{% url 'inclusion:detail' file.slug %}">{{file.incl_num}}</a> </th>
+    <td>{{file.intervention}}</td>
+    <td>{{file.chirurgie}}</td>
+    <td>{{file.pathologie}}</td>
+    <td>{{file.traitement1}}</td>
+    <td>{{file.traitement2}}</td>
     <td>{{file.author}}</td>
-    <td>{{file.date_published}}</td>
-    <td>{{file.date_updated}}</td>
   </tr>
 
   {% endfor %}
 </tbody>
 
 </table>
-{% include 'inclusion/snippets/patient_file_pagination.html' with patients=patients %}
+{% include 'inclusion/snippets/patient_pagination.html' with patients=patients %}
 
 {% endif %}
 
