--- a/src/templates/snippets/header.html
+++ b/src/templates/snippets/header.html
@@ -62,7 +62,7 @@
 
 				</a>
 				<ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-					<li><a class="dropdown-item" href="{% url 'inclusion:patients' 'is_author' %}">Mes inclusions</a></li>
+					<li><a class="dropdown-item" href="{% url 'inclusion:patients' 'is_author' %}">Mes patients</a></li>
 					<li><a class="dropdown-item" href="{% url 'personal:process' %}">Mes tâches</a></li>
 					<li><a class="dropdown-item" href="{% url 'account' %}">Mon compte</a></li>
 					<li><hr class="dropdown-divider"></li>
