--- a/src/inclusion/templates/inclusion/detail_patient.html
+++ b/src/inclusion/templates/inclusion/detail_patient.html
@@ -27,21 +27,14 @@
 <a href="{% url 'home' %}" class="btn btn-outline-dark">< Retour</a>
 
 <div class="details">
-  <fieldset disabled="disabled">
+  <!-- <fieldset disabled="disabled"> -->
 
-    <h3> Patient n°{{id}}</h3><hr>
-    <table class="table table-striped table-sm">
-      {% for field in form %}
-        <tr>
-          <th> {{field.label}} </th>
-          <td> {{field.value}} </td>
-        </tr>
-      {% endfor %}
-    </table>
+    <h3> Patient n°{{incl_num}}</h3><hr>
+    {% include 'inclusion/snippets/form2html.html' %}
 
-  </fieldset>
+  <!-- </fieldset> -->
   <div class="card-footer text-muted">
-    Modifié le {{date_updated}} par @{{author}}
+    Modifié le {{date_updated |date:'d/m/Y'}} par @{{author}}
   </div>
   <a href="{% url 'inclusion:edit' slug %}" class="btn btn-success">Modifier</a>
 
