--- a/src/inclusion/templates/inclusion/snippets/resume.html
+++ b/src/inclusion/templates/inclusion/snippets/resume.html
@@ -11,7 +11,7 @@
 
   <br>
   <h4> Traitements proposés </h4>
-  <a class='btn btn-primary' href="{% url 'personal:generate_pdf' 'False' %}"> Afficher le PDF </a>
-  <a class='btn btn-primary' href="{% url 'personal:generate_pdf' 'True' %}"> Télécharger le PDF </a>
+  <a class='btn btn-primary' href="{% url 'personal:pdf' slug 'False' %}"> Afficher le PDF </a>
+  <a class='btn btn-primary' href="{% url 'personal:pdf' slug 'True' %}"> Télécharger le PDF </a>
 
 </div>
