--- a/src/inclusion/templates/inclusion/detail_patient.html
+++ b/src/inclusion/templates/inclusion/detail_patient.html
@@ -30,19 +30,38 @@
 <div class="container px-4">
   <div class="header">
     <h4 class="h4"> Patient n°{{incl_num}}</h4>
-    <a href="{% url 'inclusion:edit' slug %}" class="btn btn-success">Modifier</a>
+    {% include 'inclusion/snippets/progress_handle.html' %}
+
+
+    <a href="{% url 'inclusion:edit' slug %}" class="btn btn-outline-success">Modifier</a>
   </div>
   <hr>
 
   <h2 align="center"> Proposition de prise en charge </h2>
 
   <hr>
-  {% include 'inclusion/snippets/resume.html' %}
+  <div class="info container">
+    <h4> Rappel des informations saisies </h4>
+    <p><strong>Numéro de registre UTAH: {{incl_num}} </strong></p>
+    <p>Intervention prévue le {{ddi|date:'d-m-Y'}} </p>
+    <p>Taille: {{height}}. Poids: {{weight}} kg </p>
+    <p>Date de naissance : {{ddn|date:'d-m-Y'}}, soit {{age}} ans le jour de la chirurgie.</p>
+    <p>Catégorie de l'intervention : {{chirurgie}}</p>
+    <p>Intitulé de l'intervention : {{intervention}}</p>
+
+    <br>
+    <h4> Traitements proposés</h4>
+      <p>{% include 'inclusion/snippets/progress_widget.html' with mode='spinner' %}</p>
+      <a class='btn btn-primary' href="{% url 'personal:pdf' slug 'False' %}"> Afficher le PDF </a>
+      <a class='btn btn-primary' href="{% url 'personal:pdf' slug 'True' %}"> Télécharger le PDF </a>
+  </div>
+
   <br>
   <div class="card-footer text-muted">
     Modifié le {{date_updated |date:'d/m/Y'}} par @{{author}}
   </div>
 </div>
+
 
 
 
