--- a/src/personal/templates/personal/mytemplate.html
+++ b/src/personal/templates/personal/mytemplate.html
@@ -5,6 +5,46 @@
 
 {% load bootstrap %}
 {% load static %}
+<style type="text/css">
+  .logo {
+    width: 200px;
+  }
+  .body {
+    margin: auto;
+    width: 80%;
+  }
+  h1 {
+    text-align: center;
+  }
+  p {
+  }
 
-<img src="{{SERVER_URL}}static/images/logo_erasme.png" alt="logo erasme">
-<p> {{text}} </p>
+</style>
+
+<img class="logo" src="{{SERVER_URL}}static/images/logo_erasme.png" alt="logo erasme">
+<div class="body">
+  <hr><h1> Modifications traitements fluidificateurs sanguin </h1> <hr><br>
+  <p> Patient né le {{ddn|date:'d-m-Y'}} </p>
+  <p> Taille={{height}}cm. Poids={{weight}}kg </p>
+  <p> Intitulé de l'intervention: {{intervention}} en {{chirurgie}} </p><br>
+  <table class="table table-striped">
+    <thead>
+      <th>Traitement</th>
+      <th>Motif</th>
+      <th>Date de la dernière prise</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>{{traitement1}}</td>
+        <td>{{pathologie}}</td>
+        <td>{{ddn|date:'d-m-Y'}}</td>
+      </tr>
+      <tr>
+        <td>{{traitement2}}</td>
+        <td>{{pathologie}}</td>
+        <td>{{ddi|date:'d-m-Y'}}</td>
+      </tr>
+    </tbody>
+  </table>
+
+</div>
