rename inclusion to patient and update task

--- a/src/patient/templates/patient/detail_patient.html
+++ b/src/patient/templates/patient/detail_patient.html
@@ -29,11 +29,11 @@
   <div class="header">
     <h4 class="h4"> Patient n°{{incl_num}}</h4>
 
-    <form id='progresss-handle' action="{% url 'inclusion:detail' slug %}" method="post"> {% csrf_token %}
+    <form id='progresss-handle' action="{% url 'patient:detail' slug %}" method="post"> {% csrf_token %}
       <button id="start-button" class="btn btn-success" type="submit"> Start </button>
     </form>
 
-    <a href="{% url 'inclusion:edit' slug %}" class="btn btn-outline-success">Modifier</a>
+    <a href="{% url 'patient:edit' slug %}" class="btn btn-outline-success">Modifier</a>
   </div>
   <hr>
 
@@ -54,19 +54,20 @@
 
 
       <div id="progress-bar" class='progress-bar progress-bar-striped progress-bar-animated' role='progressbar' style="height:20px; width: 0%; border-radius: 5px">
-        <a id="stop-button" class="btn btn-danger" style="visibility: hidden;" href="{% url 'inclusion:detail' slug %}">Stop</a>
+        <a id="stop-button" class="btn btn-danger" style="visibility: hidden;" href="{% url 'patient:detail' slug %}">Stop</a>
       </div>
       <a class='btn btn-primary' href="{% url 'personal:pdf' slug 'False' %}"> Afficher le PDF </a>
       <a class='btn btn-primary' href="{% url 'personal:pdf' slug 'True' %}"> Télécharger le PDF </a>
-  </div>
 
+
+  </div>
   <br>
   <div class="card-footer text-muted">
     Modifié le {{date_updated |date:'d/m/Y'}} par @{{author}}
   </div>
 </div>
 
-{% include 'inclusion/snippets/progress_calculation.html' with pbar='progress-bar' pstart='start-button' pstop='stop-button'%}
+{% include 'patient/snippets/progress_calculation.html' with pbar='progress-bar' pstart='start-button' pstop='stop-button'%}
 
 
 
