--- a/src/patient/templates/patient/create_patient.html
+++ b/src/patient/templates/patient/create_patient.html
@@ -19,7 +19,7 @@
     }
 </style>
 
-<a href="{% url 'home' %}" class="btn btn-outline-dark">< Retour</a>
+<a href="{% url 'home' %}" style="border-radius: 0;" class="btn btn-dark"><</a>
 
 <form method="post" class="create-form">
   {% csrf_token %}
