--- a/src/patient/templates/patient/edit_patient.html
+++ b/src/patient/templates/patient/edit_patient.html
@@ -18,7 +18,7 @@
       margin-top: 150px;
     }
 </style>
-<a href="{% url 'patient:detail' slug %}" class="btn btn-outline-dark ">< Retour</a>
+<a href="{% url 'patient:detail' slug %}" style="border-radius: 0;" class="btn btn-dark "><</a>
 
 <form method="post" class="create-form">
   {% csrf_token %}
